<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Security Systems Trapped</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="home">Inicio</string>
    <string name="settings">Configuración</string>
    <string name="share">Compartir</string>
    <string name="help">Ayuda</string>
    <string name="homeButtons">Home</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signup">¿ No tienes una cuenta ? \n REGISTRATE AHORA !!</string>
    <string name="registration">REGISTRATE </string>
    <string name="logout">Cerrar Sesión</string>
    <string name="grupoweb_gmail_com">GrupoWeb@gmail.com</string>
    <string name="add">Agregar</string>
    <string name="eliminar_un_dispositivo">Eliminar un dispositivo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="info">Mapa</string>
    <string name="devices">Dispositivos</string>
    <string name="registrarse">Registrarse</string>
    <string name="registro">Registro</string>
    <string name="email_label">Email</string>
    <string name="password_label">Contraseña</string>
    <string name="phone">Teléfono</string>
    <string name="Name">Nombre</string>
    <string name="Login">Iniciar Sesión</string>
    <string name="Register">Registrarse</string>
    <string name="mail_error_label">El email no puede estar vacio.</string>
    <string name="error_email_label">El email no es valido.</string>
    <string name="error_pass_label">El password no puede estar vacio.</string>
    <string name="error_cedula_label">La cedula no puede estar vacia.</string>
    <string name="error_name_label">El nombre no puede estar vacio.</string>
    <string name="error_phone_label">El teléfono no puede estar vacio.</string>
    <string name="ResetPassword">Olvido su contraseña</string>
    <string name="Registrarse">Registrarse</string>
    <string name="menu_profile">Perfil</string>
    <string name="manu_logout">Cerrar Sesión</string>
    <string name="bienvenido_a_hogar_seguro">Bienvenido a hogar seguro</string>
    <string name="update">Actualizar</string>
    <string name="id">Cedula</string>
    <string name="Camara">Camara</string>
    <string name="Galeria">Galeria</string>
    <string name="Atras">Atrás</string>
    <string name="snackBar_dismiss_label">cerrar</string>
    <string name="permission_denied_label">No pude obtener el permiso necesario</string>
    <string name="switchUserPositionLabel">Seguir mi ubicación</string>
    <string name="camara_room">Cámara Sala</string>
    <string name="movement_sensor">Sensor de movimiento sala</string>
    <string name="fix_position_label">Seguir al usuario\n</string>
    <string name="emergencia">Emergencia</string>
    <string name="en_caso_de_una_emergencia_utiliza_esta_funci_n_para_alertar_a_las_personas_cercanas">En caso de una emergencia, utiliza esta función para alertar a las personas cercanas.</string>
    <string name="accede_a_las_c_maras_de_tu_hogar_para_vigilar_tus_espacios_y_garantizar_la_seguridad">Accede a las cámaras de tu hogar para vigilar tus espacios y garantizar la seguridad.</string>
    <string name="habitaci_n">Habitación</string>
    <string name="dispositivos">Dispositivos</string>
    <string name="consulta_tus_dispositivos_actuales_y_controla_su_funcionamiento_desde_aqu">Consulta tus dispositivos actuales y controla su funcionamiento desde aquí.</string>

</resources>