<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbkg2"
    android:baselineAligned="true"
    android:gravity="center"
    android:orientation="vertical"
    android:theme="@style/StatusBar">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@drawable/custom_edittext"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/loginText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:text="@string/registro"
                android:textAlignment="center"
                android:textSize="36sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:autofillHints=""
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/baseline_person_24"
                android:drawablePadding="10dp"
                android:hint="@string/username"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="@color/black_1000"
                android:textColorHighlight="@color/white_1000">
            </EditText>

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="8dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/black_1000"
                android:textColorHighlight="@color/white_1000">
            </EditText>

            <Button
                android:id="@+id/RegBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/grey_500"
                android:text="@string/registrarse"
                android:textColor="@color/white_1000"
                android:textSize="20sp"
                android:textStyle="bold"
                app:cornerRadius="20dp">
            </Button>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>