<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbkg2"
    android:baselineAligned="true"
    android:gravity="center"
    android:orientation="vertical"
    android:theme="@style/StatusBar">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/custom_edittext"
        app:cardCornerRadius="30dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/loginText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:text="@string/login"
                android:textAlignment="center"
                android:textSize="36sp"
                android:textStyle="bold" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/animationView"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:layout_constraintTop_toTopOf="parent"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/data_security_animation" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/loginEmail"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/email_label"
                android:inputType="textEmailAddress"
                android:minHeight="50dp"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/animationView"
                app:startIconDrawable="@drawable/baseline_email_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="50" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/loginPassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/password_label"
                android:minHeight="50dp"
                app:endIconMode="password_toggle"
                app:layout_constraintTop_toBottomOf="@+id/loginEmail"
                app:startIconDrawable="@drawable/baseline_password_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/loginButton"
                style="@style/TextColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:baselineAligned="false"
                android:text="@string/Login"
                app:layout_constraintEnd_toStartOf="@+id/gotToRegister"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginPassword" />

            <Button
                android:id="@+id/gotToRegister"
                style="@style/TextColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:text="@string/Registrarse"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/loginButton"
                app:layout_constraintTop_toBottomOf="@+id/loginPassword" />

            <Button
                android:id="@+id/ResetPassword"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/ResetPassword"
                android:textColor="@color/teal_700"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginButton">
            </Button>
        </LinearLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>